	* Allowed pathname containing spaces in input file, as long as the whole pathname is in quotes ("")
- MODIFICATIONS
        * 'make test' has been reconfigured to run before issuing make install (can be run from top directory)
        * Removed GAMMA keyword from ELEC statement
        * Path lengths can now be larger than 80 characters
	* Expanded authorship list
- BUG FIXES
	* Fixed typos in User Guide (ion keyword) and clarified SMPBE keyword
	usage
	* Fixed typo in User Guide (writemat: poission -> poisson)


#############################################################################
                                 VERSION 1.0.0
                                   April 2008
#############################################################################
- NEW FEATURES
	* Changed license to New BSD style open source license (see http://www.opensource.org/licenses/bsd-license.php) for more information
	* Added in a feature limited version of PMG (Aqua) that reduces the memory footprint of an APBS run by 2-fold
	* Modified several routines to boost the speed of APBS calculations by approximately 10% when combined with the low memory version of APBS
	* Simplified parameter input for ION and SMPBE keywords (key-value pairs) 
	* Examples and documentation for size-modified PBE code (Vincent Chu et al)
	* Added in "fast" compile-time option that uses optimized parameters for multigrid calculations
	* mg-dummy calculations can be run with any number (n>3) of grid points
	* Updated PMG license to LGPL
	* Added per-atom SASA information output from APOLAR calculations
	* Added per-atom verbosity to APOLAR calculation outputs
	* Ability to read-in MCSF-format finite element meshes (e.g., as produced by Holst group GAMER software)
	* Updated installation instructions in user guide
	* Updated inputgen.py to write out the electrostatic potential for APBS input file.
- BUG FIXES
	* Updated tools/python/apbslib* for new NOsh functionality