@@ -1,257 +1,0 @@
-CHANGES
-Copyright
-Makefile.am
-Makefile.in
-PKG-INFO
-README
-setup.cfg
-setup.py
-ZSI/.cvsignore
-ZSI/LBNLCopyright
-ZSI/ServiceContainer.py
-ZSI/ServiceProxy.py
-ZSI/TC.py
-ZSI/TCapache.py
-ZSI/TCcompound.py
-ZSI/TCnumbers.py
-ZSI/TCtimes.py
-ZSI/__init__.py
-ZSI/address.py
-ZSI/auth.py
-ZSI/client.py
-ZSI/digest_auth.py
-ZSI/dispatch.py
-ZSI/fault.py
-ZSI/parse.py
-ZSI/resolvers.py
-ZSI/schema.py
-ZSI/typeinterpreter.py
-ZSI/version.py
-ZSI/writer.py
-ZSI.egg-info/PKG-INFO
-ZSI.egg-info/SOURCES.txt
-ZSI.egg-info/dependency_links.txt
-ZSI.egg-info/entry_points.txt
-ZSI.egg-info/top_level.txt
-ZSI/generate/__init__.py
-ZSI/generate/commands.py
-ZSI/generate/containers.py
-ZSI/generate/pyclass.py
-ZSI/generate/utility.py
-ZSI/generate/wsdl2dispatch.py
-ZSI/generate/wsdl2python.py
-ZSI/twisted/WSresource.py
-ZSI/twisted/WSsecurity.py
-ZSI/twisted/__init__.py
-ZSI/twisted/client.py
-ZSI/twisted/interfaces.py
-ZSI/twisted/reverse.py
-ZSI/twisted/wsgi.py
-ZSI/wstools/.cvsignore
-ZSI/wstools/Namespaces.py
-ZSI/wstools/TimeoutSocket.py
-ZSI/wstools/UserTuple.py
-ZSI/wstools/Utility.py
-ZSI/wstools/WSDLTools.py
-ZSI/wstools/XMLSchema.py
-ZSI/wstools/XMLname.py
-ZSI/wstools/ZPL
-ZSI/wstools/__init__.py
-ZSI/wstools/c14n.py
-ZSI/wstools/license.txt
-ZSI/wstools/logging.py
-ZSI/wstools/test/.cvsignore
-ZSI/wstools/test/README
-ZSI/wstools/test/__init__.py
-ZSI/wstools/test/config.txt
-ZSI/wstools/test/schema.tar.gz
-ZSI/wstools/test/test_t1.py
-ZSI/wstools/test/test_wsdl.py
-ZSI/wstools/test/test_wstools.py
-ZSI/wstools/test/test_wstools_net.py
-ZSI/wstools/test/xmethods.tar.gz
-dist/ZSI-2.1_a1-py2.5.egg
-doc/.cvsignore
-doc/blank.png
-doc/contents.png
-doc/guide.css
-doc/guide.html
-doc/guide.pdf
-doc/guide.ps
-doc/index.png
-doc/modules.png
-doc/next.png
-doc/previous.png
-doc/pyfav.png
-doc/up.png
-doc/zsi.css
-doc/zsi.html
-doc/zsi.pdf
-doc/zsi.ps
-doc/zsi.xsd
-doc/examples/client/receive_response/complex/binding.wsdl
-doc/examples/client/receive_response/complex/interface.wsdl
-doc/examples/client/receive_response/complex/types.xsd
-doc/examples/client/receive_response/complex/manual/.cvsignore
-doc/examples/client/receive_response/complex/manual/ComplexTypes.py
-doc/examples/client/receive_response/complex/manual/client.py
-doc/examples/client/receive_response/complex/server/.cvsignore
-doc/examples/client/receive_response/complex/server/server.py
-doc/examples/client/receive_response/complex/wsdl2py/.cvsignore
-doc/examples/client/receive_response/complex/wsdl2py/client.py
-doc/examples/client/receive_response/simple/binding.wsdl
-doc/examples/client/receive_response/simple/interface.wsdl
-doc/examples/client/receive_response/simple/ServiceProxy/client.py
-doc/examples/client/receive_response/simple/server/.cvsignore
-doc/examples/client/receive_response/simple/server/server.py
-doc/examples/client/receive_response/simple/wsdl2py/.cvsignore
-doc/examples/client/receive_response/simple/wsdl2py/README
-doc/examples/client/receive_response/simple/wsdl2py/client.py
-doc/examples/client/send_request/complex/binding.wsdl
-doc/examples/client/send_request/complex/interface.wsdl
-doc/examples/client/send_request/complex/types.xsd
-doc/examples/client/send_request/complex/manual/.cvsignore
-doc/examples/client/send_request/complex/manual/ComplexTypes.py
-doc/examples/client/send_request/complex/manual/client.py
-doc/examples/client/send_request/complex/server/.cvsignore
-doc/examples/client/send_request/complex/server/ComplexTypes.py
-doc/examples/client/send_request/complex/server/server.py
-doc/examples/client/send_request/complex/wsdl2py/.cvsignore
-doc/examples/client/send_request/complex/wsdl2py/client.py
-doc/examples/client/send_request/simple/README
-doc/examples/client/send_request/simple/binding.wsdl
-doc/examples/client/send_request/simple/interface.wsdl
-doc/examples/client/send_request/simple/Binding/client.py
-doc/examples/client/send_request/simple/ServiceProxy/client.py
-doc/examples/client/send_request/simple/server/.cvsignore
-doc/examples/client/send_request/simple/server/server.py
-doc/examples/client/send_request/simple/wsdl2py/.cvsignore
-doc/examples/client/send_request/simple/wsdl2py/README
-doc/examples/client/send_request/simple/wsdl2py/client.py
-doc/examples/server/receive_request/complex/binding.wsdl
-doc/examples/server/receive_request/complex/interface.wsdl
-doc/examples/server/receive_request/complex/types.xsd
-doc/examples/server/receive_request/complex/client/.cvsignore
-doc/examples/server/receive_request/complex/client/ComplexTypes.py
-doc/examples/server/receive_request/complex/client/client.py
-doc/examples/server/receive_request/complex/manual/.cvsignore
-doc/examples/server/receive_request/complex/manual/ComplexTypes.py
-doc/examples/server/receive_request/complex/manual/server.py
-doc/examples/server/receive_request/complex/wsdl2py/.cvsignore
-doc/examples/server/receive_request/complex/wsdl2py/server.py
-doc/examples/server/receive_request/simple/binding.wsdl
-doc/examples/server/receive_request/simple/interface.wsdl
-doc/examples/server/receive_request/simple/CGI/README
-doc/examples/server/receive_request/simple/CGI/cgi.py
-doc/examples/server/receive_request/simple/client/client.py
-doc/examples/server/receive_request/simple/mod_python/.cvsignore
-doc/examples/server/receive_request/simple/mod_python/MyHandler.py
-doc/examples/server/receive_request/simple/mod_python/README
-doc/examples/server/receive_request/simple/mod_python/mod_python.py
-doc/examples/server/receive_request/simple/standalone/.cvsignore
-doc/examples/server/receive_request/simple/standalone/README
-doc/examples/server/receive_request/simple/standalone/standalone.py
-doc/examples/server/send_response/complex/binding.wsdl
-doc/examples/server/send_response/complex/interface.wsdl
-doc/examples/server/send_response/complex/types.xsd
-doc/examples/server/send_response/complex/client/.cvsignore
-doc/examples/server/send_response/complex/client/client.py
-doc/examples/server/send_response/complex/manual/.cvsignore
-doc/examples/server/send_response/complex/manual/ComplexTypes.py
-doc/examples/server/send_response/complex/manual/server.py
-doc/examples/server/send_response/complex/wsdl2py/.cvsignore
-doc/examples/server/send_response/complex/wsdl2py/server.py
-doc/examples/server/send_response/simple/binding.wsdl
-doc/examples/server/send_response/simple/interface.wsdl
-doc/examples/server/send_response/simple/no_typecode/client.py
-doc/examples/server/send_response/simple/no_typecode/server.py
-doc/examples/server/send_response/simple/wsdl2py/.cvsignore
-doc/examples/server/send_response/simple/wsdl2py/README
-doc/examples/server/send_response/simple/wsdl2py/client.py
-doc/examples/server/send_response/simple/wsdl2py/server.py
-samples/README
-samples/WSGI/README
-samples/WSGI/SimpleEcho.wsdl
-samples/WSGI/echo_client.py
-samples/WSGI/echo_server.py
-samples/WSGI/echo_setup.py
-scripts/wsdl2dispatch
-scripts/wsdl2py
-test/.cvsignore
-test/README
-test/cgicli.py
-test/test_QName.py
-test/test_TCtimes.py
-test/test_URI.py
-test/test_callhome.py
-test/test_list.py
-test/test_rfc2617.py
-test/test_t1.py
-test/test_t2.py
-test/test_t3.py
-test/test_t4.py
-test/test_t5.py
-test/test_t6.py
-test/test_t7.py
-test/test_t8.py
-test/test_t9.py
-test/test_union.py
-test/test_zsi.py
-test/test_zsi_net.py
-test/tests_bad.py
-test/tests_good.py
-test/wsdl2py/.cvsignore
-test/wsdl2py/README
-test/wsdl2py/ServiceTest.py
-test/wsdl2py/config.txt
-test/wsdl2py/runTests.py
-test/wsdl2py/test_AWSECommerceService.py
-test/wsdl2py/test_AmazonS3.py
-test/wsdl2py/test_Attributes.py
-test/wsdl2py/test_BasicComm.py
-test/wsdl2py/test_Choice.py
-test/wsdl2py/test_Clearspace.py
-test/wsdl2py/test_DateService.py
-test/wsdl2py/test_DerivedTypes.py
-test/wsdl2py/test_Echo.py
-test/wsdl2py/test_EchoWSAddr200403.py
-test/wsdl2py/test_FinancialService.py
-test/wsdl2py/test_GoogleAdWords.py
-test/wsdl2py/test_InfoBil.py
-test/wsdl2py/test_Manufacturer.py
-test/wsdl2py/test_MapPoint.py
-test/wsdl2py/test_NVOAdmin.py
-test/wsdl2py/test_OpcDaGateway.py
-test/wsdl2py/test_Racing.py
-test/wsdl2py/test_Sabre.py
-test/wsdl2py/test_SquareService.py
-test/wsdl2py/test_SubstitutionGroup.py
-test/wsdl2py/test_TerraService.py
-test/wsdl2py/test_ThreatService.py
-test/wsdl2py/test_VIM.py
-test/wsdl2py/test_WSDLImport.py
-test/wsdl2py/test_WhiteMesa.py
-test/wsdl2py/test_XMethodsQuery.py
-test/wsdl2py/test_ZipCodeResolver.py
-test/wsdl2py/servers/BasicServer.py
-test/wsdl2py/servers/DateService.py
-test/wsdl2py/servers/EchoServer.py
-test/wsdl2py/servers/EchoWSAddr200403Server.py
-test/wsdl2py/servers/FinancialService.py
-test/wsdl2py/servers/SquareService.py
-test/wsdl2py/servers/WhiteMesa.py
-test/wsdl2py/wsdl/BasicComm.wsdl
-test/wsdl2py/wsdl/DateService.wsdl
-test/wsdl2py/wsdl/EchoWSAddr200403.wsdl
-test/wsdl2py/wsdl/FinancialService.wsdl
-test/wsdl2py/wsdl/ManufacturerImpl.wsdl
-test/wsdl2py/wsdl/Racing.wsdl
-test/wsdl2py/wsdl/SquareService.wsdl
-test/wsdl2py/wsdl/nvo-admin.wsdl
-test/wsdl2py/wsdl/test_Attributes.xsd
-test/wsdl2py/wsdl/test_Choice.xsd
-test/wsdl2py/wsdl/test_DerivedTypes.xsd
-test/wsdl2py/wsdl/test_SubstitutionGroup.xsd
-test/wsdl2py/wsdl/test_WSDLImport.wsdl
-test/wsdl2py/wsdl/test_WSDLImport2.wsdl
-test/wsdl2py/wsdl/vim.wsdl
